[package]
name = "yogachain-ai-modules"
version = "0.1.0"
edition = "2021"

[dependencies]
# AI/ML Dependencies
rand = "0.8.5"
ndarray = "0.15.6"
onnxruntime = { version = "0.0.15", features = ["cuda"] } # For running AI models

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Blockchain Integration
yogachain-core = { path = "../core" }

# Shared Common Dependencies
yogachain-common = { path = "../yogachain-common" }